array.island.Island.scala.error
Compilation error:
Island:7: error: type mismatch;
 found   : Int
 required: String
      liste = liste + num(i)
                         ^Island:5: error: type mismatch;
 found   : Unit
 required: Int
  for (i<-1 to num.length-1){
        ^